# collision-engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/common/: allocator.hpp  constants.hpp  thread_pool.hpp  thread_safe_queue.hpp  utils.hpp
src/physics/: grid.hpp  object.hpp  simd_collection.hpp  simd_grid.hpp  simd_solver.hpp  solver.hpp  vec.hpp
src/renderer/: renderer.hpp  simd_renderer.hpp
src/tests/: solver_test.cpp
tests/: allocator_test.cpp  grid_test.cpp  renderer_test.cpp  simd_collection_test.cpp  simd_renderer_test.cpp  simd_solver_test.cpp  solver_test.cpp
